# c4_rust_AlRafaah

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ast.rs  bytecode.rs  lexer.rs  lib.rs  main.rs  parser.rs  vm.rs
tests/: bytecode_tests.rs  lexer_tests.rs  parser_tests.rs  self_host.rs  vm_tests.rs
